Optimization for weak computers.