@@ -21,7 +21,7 @@ import static com.faforever.iceadapter.util.DatagramSocketUtils.MAX_SIZE_PACKET;
 public class FaToPeerModule implements ModuleBase {
     public static final char COMMAND_FA = 'd';
     private static final String LOCK_MODULE = "FAListenerModule";
-    private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+    private final ExecutorService executor = Executors.newFixedThreadPool(1);
 
     private final Peer peer;
     private volatile Future<?> listener;
